--- a/css/main.css
+++ b/css/main.css
@@ -400,7 +400,6 @@
   height: 27vw;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 30px;
   box-sizing: border-box;
 }
 
@@ -619,12 +618,16 @@
 
 @media (max-width: 768px) {
  
+	/* what's on */
+	#container .section__whats-on{
+		margin-bottom: 80px;
+	}
   .section__whats-on .section__top .section__top-box:nth-child(1){
     text-align: center;
   }
 
   .section__whats-on .section__top .section__top-box:nth-child(2) {
-		padding: 24px 0 12px;
+		padding: 24px 0;
 		width:100%;
   }
 
@@ -632,23 +635,14 @@
     padding-left: 0;
     border-left: 0;
   }
-
-  .section__whats-on .section__top-box .btn-more img {
+	.section__top .btn-more{
+		font-size: 1rem;
+	}
+  .section__top .btn-more img {
     display: none;
   }
   .section__whats-on .section__top .section__top-box:nth-child(3) p > span{
     display: inline-block;
-  }
-
-  .section__space-culture .section__cnt ul li{
-    width: 26vw;
-  height: 26vw;
-    margin-right: 2vw;
-    margin-bottom: 2vw;
-  }
-  
-  .section__space-culture .section__cnt ul li a img {
-    width: 80px;
   }
   
   .section__cnt .section__cnt-wrap:before{
@@ -678,5 +672,61 @@
 
 	.section__whats-on .section__cnt .section__activity .section__activity-info .section__activity-desc{
 		padding-bottom: 8px;
+	}
+
+	/* space, culture */
+  .section__space-culture .section__cnt ul li{
+    width: 26vw;
+  height: 26vw;
+    margin-right: 2vw;
+    margin-bottom: 2vw;
+  }
+  
+  .section__space-culture .section__cnt ul li a img {
+    width: 80px;
+	}
+	
+	/* post */
+	.section__post .section__cnt{
+		flex-wrap: wrap;
+	}
+	.section__post .section__cnt .section__cnt-box{
+		width: calc((100% - 8px) / 2);
+		margin-bottom: 8px;
+		font-size: 0.9rem;
+	}
+	.section__post .section__cnt .section__cnt-box + .section__cnt-box{
+		margin-left: 8px;
+	}
+	.section__post .section__cnt .section__cnt-box:nth-child(3){
+		margin-left: 0
+	}
+	.section__post .section__cnt .section__cnt-box .section__post-category{
+		padding: 8px 0 4px;
+		font-size: 0.8rem;
+	}
+	.section__post .section__cnt .section__cnt-box .section__post-title{
+		padding: 8px 0;
+		font-size: 1rem;
+	}
+
+	/* event */
+	#container .section__event{
+		margin: 80px 0;
+	}
+	.section__event .section__cnt{
+		flex-direction: column;
+	}
+	.section__event .section__cnt .section__cnt-box{
+		width: 100%;
+		height: 60vw;
+	}
+	.section__event .section__cnt .section__cnt-box + .section__cnt-box{
+		margin-top: 8px;
+	}
+
+	/* notice */
+	#container .section__notice{
+		flex-direction: column;
 	}
 }
