--- a/css/style.css
+++ b/css/style.css
@@ -45,19 +45,19 @@
 #gnb .btn-nav{
 	display: none;
 }
-#gnb .lst-gnb {
+.nav .lst-gnb {
   display: flex;
   padding: 0 18px;
   height: 96px;
 }
-#gnb .lst-gnb .lst-gnb__item {
+.nav .lst-gnb .lst-gnb__item {
   position: relative;
   padding: 0 28px;
   font-weight: bold;
   font-size: 1.2rem;
   height: 100%;
 }
-#gnb .lst-gnb .lst-gnb__item .lst-gnb__item-link {
+.nav .lst-gnb .lst-gnb__item .lst-gnb__item-link {
   display: flex;
   align-items: center;
   width: 100%;
@@ -65,17 +65,16 @@
   font-family: "Noto Sans KR";
   font-weight: 500;
 }
-#gnb .lst-gnb .lst-gnb__item .icon-arrow {
+.nav .lst-gnb .lst-gnb__item .icon-arrow {
   padding-bottom: 6px;
   height: 20px;
   transform: rotate(90deg);
 }
-#gnb .lst-gnb .lst-gnb-sub {
+.nav .lst-gnb .lst-gnb-sub {
   display: none;
 }
 
-#gnb .lst-gnb .lst-gnb__item:hover .lst-gnb-sub,
-#gnb .lst-gnb .lst-gnb__item.on .lst-gnb-sub {
+#gnb .lst-gnb .lst-gnb__item:hover .lst-gnb-sub{
   display: block;
   position: absolute;
   top: 72px;
@@ -88,12 +87,10 @@
   font-family: YouAndI;
   font-weight: normal;
 }
-#gnb .lst-gnb .lst-gnb__item:hover .lst-gnb-sub .lst-gnb-sub__item,
-#gnb .lst-gnb .lst-gnb__item.on .lst-gnb-sub .lst-gnb-sub__item {
+#gnb .lst-gnb .lst-gnb__item:hover .lst-gnb-sub .lst-gnb-sub__item{
   height: 3rem;
 }
-#gnb .lst-gnb .lst-gnb__item:hover .lst-gnb-sub .lst-gnb-sub__item:hover,
-#gnb .lst-gnb .lst-gnb__item.on .lst-gnb-sub .lst-gnb-sub__item:hover {
+#gnb .lst-gnb .lst-gnb__item:hover .lst-gnb-sub .lst-gnb-sub__item:hover{
   background-color: #444;
   color: rgba(255, 255, 255, 1);
 }
@@ -102,13 +99,7 @@
   .lst-gnb__item:hover
   .lst-gnb-sub
   .lst-gnb-sub__item
-  .lst-gnb-sub__item-link,
-#gnb
-  .lst-gnb
-  .lst-gnb__item.on
-  .lst-gnb-sub
-  .lst-gnb-sub__item
-  .lst-gnb-sub__item-link {
+  .lst-gnb-sub__item-link{
   display: flex;
   width: 100%;
   height: 100%;
@@ -116,13 +107,69 @@
   align-items: center;
 }
 
-#header .btn__search {
-  display: block;
-  width: 20px;
-  height: 20px;
+/* nav-mobile */
+.nav-mobile{
+	display: none;
+}
+.nav-mobile.nav-mobile--active{
+	display: block;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 150;
+}
+.nav-mobile .lst-gnb{
+	width: 100%;
+	height: 50vh;
+	color: #fff;
+	background-color: #222;	
+	padding: 0;
+	flex-direction: column;
+}
+.nav-mobile .lst-gnb .lst-gnb__item .icon-arrow{
+	height:24px;
+}
+
+.nav-mobile .lst-gnb .lst-gnb__item{
+	height: 40px;
+	background-color: #222;	
+}
+
+.nav-mobile .lst-gnb .lst-gnb-sub{
+	display: none;
+}
+.nav-mobile .lst-gnb .lst-gnb__item.on{
+	height:100%;
+}
+.nav-mobile .lst-gnb .lst-gnb__item.on .lst-gnb-sub{
+	display: block;
+	position: absolute;
+	top: 28px;
+	width: 100%;
+}
+
+.nav-mobile .lst-gnb .lst-gnb__item.on .lst-gnb-sub .lst-gnb-sub__item{
+	height: 40px;
+	padding-left: 24px;
+	font-size: 0.9rem;
+  font-family: YouAndI;
+  font-weight: normal;
+}
+
+.nav-mobile .lst-gnb .lst-gnb__item.on .lst-gnb-sub .lst-gnb-sub__item .lst-gnb-sub__item-link{
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 100%;
 }
 
 /* search */
+#header .btn__search {
+	display: block;
+	width: 20px;
+	height: 20px;
+}
 .search {
   display: none;
 }
@@ -187,14 +234,14 @@
   background: #fff;
 }
 
-.search .btn__close{
+.btn__close{
   position: absolute;
   top: 45px;
   right: 30px;
   width: 20px;
   height: 20px;
 }
-.search .btn__close .bar{
+.btn__close .bar{
   position: absolute;
   top: 0;
   width: 100%;
@@ -203,7 +250,7 @@
   left: 0;
   transform: rotate(45deg);
 }
-.search .btn__close .bar:first-of-type {
+.btn__close .bar:first-of-type {
   right: 0;
   transform: rotate(-45deg)
 }
@@ -342,7 +389,7 @@
 
 	/* container */
 	#container .inner-wrap{
-		padding: 100px 20px 0;
+		padding: 50px 20px 0;
 	}
 
 	#container .section__title{
@@ -363,12 +410,14 @@
 	#footer{
 		flex-direction: column;
 		padding: 30px 0;
+		font-size: 0.8rem;
 	}
 	#footer .footer__info{
 		flex-direction: column;
 		margin-left: 0px;
 		width: 100%;
 		margin: 10px 0;
+		font-size: 0.8rem;
 	}
 	.footer__info > *{
 		padding: 1px 0;
