--- a/css/style.css
+++ b/css/style.css
@@ -117,15 +117,18 @@
 	top: 0;
 	left: 0;
 	width: 100%;
+	height: 100%;
+	background-color: rgba(34, 34, 34, 0.5);
 	z-index: 150;
 }
 .nav-mobile .lst-gnb{
 	width: 100%;
-	height: 50vh;
+	height: auto;
 	color: #fff;
 	background-color: #222;	
 	padding: 0;
 	flex-direction: column;
+	padding: 12px 0;
 }
 .nav-mobile .lst-gnb .lst-gnb__item .icon-arrow{
 	height:24px;
@@ -141,12 +144,14 @@
 }
 .nav-mobile .lst-gnb .lst-gnb__item.on{
 	height:100%;
+	display: flex;
+	flex-direction: column;
+}
+.nav-mobile .lst-gnb .lst-gnb__item.on .lst-gnb__item-link{
+	height: 40px;
 }
 .nav-mobile .lst-gnb .lst-gnb__item.on .lst-gnb-sub{
 	display: block;
-	position: absolute;
-	top: 28px;
-	width: 100%;
 }
 
 .nav-mobile .lst-gnb .lst-gnb__item.on .lst-gnb-sub .lst-gnb-sub__item{
@@ -162,6 +167,11 @@
 	align-items: center;
 	width: 100%;
 	height: 100%;
+}
+
+.nav-mobile .btn__close{
+	right: 20px;
+	top: 30px;
 }
 
 /* search */
