--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,9 @@
   justify-content: center;
   align-items: center;
 }
+.nav.nav-mobile{
+	display: none;
+}
 
 /* search */
 #header .btn__search {
@@ -383,9 +386,6 @@
 	}
 
 	/* nav-mobile */
-	.nav-mobile{
-		display: none;
-	}
 	.nav-mobile.nav-mobile--active{
 		display: block;
 		position: fixed;
